release: add declarative runtime 4.1.0